docs(tasks): close round 1 — Phase 0 backend + Phase 1 schema trio reconciled
Round terminal commit (orchestrator framing) for round 1. Reconciles planning
state after the backend session that landed Phase 0 (0.1-0.5) + the Phase-1
V1/V2/V3 Flyway migration trio. Implementer slices: 555c2a8 (0.1) d888f92 (0.2)
e8b5305 (0.3) 7c4b649 (0.4+0.5) b230ad0 (1.2) a2230c5 (1.3) c1ae1f1 (1.4),
+ 1a34f3b (jacoco task-dep fix) + 15afd68 (session doc 001).

- MVP_TASKS.md: ticked 0.1-0.5 + 1.1 (satisfied-by-0.3) / 1.2 / 1.3 / 1.4;
  round-1 Log entry; Currently-in-progress -> 1.5; sequencing notes (1.1
  satisfied-by-0.3, 0.7/0.8 resequenced, frontend deferred to the wc-web track);
  Carry-forward drained (2 forward items).
- ARCHITECTURE.md: Appendix C.1/C.2/C.3 realized-tree reconciliations + B.1
  RoleType row + AllowedAction annotation (backend sections only).
- apps/wc-api/CLAUDE.md: 4 cross-doc-invariant rows (enum vocab, core schema,
  partial uniques, projections) + lessons index 1-6 + Standard-commands gate fix.
- apps/wc-api/LESSONS.md: 1-6 (Gradle gate-wiring; SpotBugs Confidence Groovy;
  enum<->CHECK test; Spring Boot skeleton; Flyway+Testcontainers harness; backend
  gate = ./gradlew check from apps/wc-api).
- docs/planning/DATA_MODEL.md: stamped superseded-by-S4 (stale pre-delta draft).
- docs/briefs/001-005,007,008: the round's /tdd briefs.
- docs/runbooks/jdk21-toolchain-setup.md: JDK-21 provisioning (the no-JVM blocker).

Frontend-area docs (apps/wc-web/CLAUDE.md + LESSONS.md), briefs 006/009, and the
styling proposal belong to the parallel st6-main-wc-web-* track and are not staged
here. No remote configured -> push deferred.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>